# av1-janitor

./: .dockerignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  PACKAGING.md  PERFORMANCE.md  README.md  av1d.service  build-docker.sh  build_output.txt  config.toml  docker-compose.yml  install-complete.sh  install.sh  lib_test_output.txt  lib_tests.txt  rust_av1d_ratatui_software_quality_spec.md  size_gate_test_output.txt  test_output.txt  test_results.txt  test_results_final.txt  test_results_final2.txt  update.sh
.kiro/specs/av1-reencoder/: design.md  requirements.md  tasks.md
.kiro/specs/tui-missing-info-fix/: design.md  requirements.md  tasks.md
crates/cli-daemon/: Cargo.toml
crates/cli-daemon/src/: main.rs
crates/cli-tui/: Cargo.toml
crates/cli-tui/src/: main.rs  metadata.rs
crates/cli-tui/src/models/: config.rs  job.rs  mod.rs
crates/cli-tui/tests/: detail_view_properties.proptest-regressions  detail_view_properties.rs  tui_properties.proptest-regressions  tui_properties.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: classify.rs  config.rs  daemon_loop.rs  gates.rs  jobs.rs  lib.rs  probe.rs  replace.rs  scan.rs  sidecars.rs  size_gate.rs  stable.rs  startup.rs  validate.rs
crates/daemon/src/encode/: aom.rs  common.rs  mod.rs  rav1e.rs  svt.rs
crates/daemon/tests/: classify_properties.proptest-regressions  classify_properties.rs  concurrent_limiting_test.rs  encode_properties.proptest-regressions  encode_properties.rs  gates_properties.rs  jobs_properties.rs  probe_properties.rs  probe_unit_tests.rs  replace_properties.rs  scan_properties.proptest-regressions  scan_properties.rs  sidecars_unit_tests.rs  size_gate_properties.rs  stable_properties.rs  startup_integration.rs  validate_properties.proptest-regressions  validate_properties.rs
tui-package/: Cargo.toml  FEATURES.md  LICENSE  QUICK_START.md  README.md
tui-package/examples/: integration.md
tui-package/src/: main.rs
tui-package/src/models/: job.rs  mod.rs
