[package]
name = "portable-tui"
version = "0.1.0"
edition = "2021"
authors = ["TUI Package"]
license = "MIT"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
ratatui = "0.27"
crossterm = "0.28"
sysinfo = "0.31"
humansize = "2.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
